--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,15 @@ h6,
 .blog-item:hover img {
     transform: scale(1.1);
 }
+.commitment_section{
+    width: 100%;
+    padding: 40px 90px;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center;
+}
+.commitment_section h1{
+    font-weight: 800 !important;
+    text-align: center;
+}
