--- a/css/style.css
+++ b/css/style.css
@@ -265,3 +265,10 @@ h6,
     font-weight: 800 !important;
     text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+    .contact_image{
+        display: none;
+    }
+    
+}
